--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
       </div>
       <div class="container header-inner">
         <a class="brand" href="#">Villa Gym Colima</a>
-        <nav class="nav" aria-label="Navegación principal">
+        <button
+          class="nav-toggle"
+          aria-label="Abrir menú"
+          aria-expanded="false"
+          aria-controls="main-nav"
+        >
+          ☰
+        </button>
+        <nav id="main-nav" class="nav" aria-label="Navegación principal">
           <a href="#sobre">Sobre</a>
           <a href="#clases">Clases</a>
           <a href="#entrenadores">Entrenadores</a>
