--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Villa Gym Colima — Transforma tu cuerpo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="/images/logo.ico" />
     <meta
@@ -41,8 +45,8 @@
     <main>
       <!-- HERO -->
       <section id="hero" class="hero">
-        <div class="container hero-grid">
-          <div class="hero-content">
+        <div class="container hero-grid row">
+          <div class="hero-content col-12 col-lg-7">
             <h1>Transforma tu cuerpo con Villa Gym Colima</h1>
             <p class="lead">
               Entrenamiento funcional y de fuerza, comunidad que impulsa tus
@@ -58,7 +62,7 @@
               <li>Comunidad y retos mensuales</li>
             </ul>
           </div>
-          <div class="hero-image" aria-hidden="true">
+          <div class="hero-image col-12 col-lg-5" aria-hidden="true">
             <img
               class="hero-logo"
               src="images/logo.jpg"
@@ -78,21 +82,21 @@
             comunidad. Entrena con coaches certificados y una comunidad que te
             motiva a mejorar cada día.
           </p>
-          <div class="values-grid">
-            <div class="card">
+          <div class="values-grid row">
+            <div class="card col-12 col-md-4">
               <h3>Comunidad</h3>
               <p>
                 Ambiente cercano y de apoyo, retos mensuales y eventos grupales.
               </p>
             </div>
-            <div class="card">
+            <div class="card col-12 col-md-4">
               <h3>Entrenamiento</h3>
               <p>
                 Rutinas de fuerza y funcional que se adaptan a tu nivel y
                 objetivos.
               </p>
             </div>
-            <div class="card">
+            <div class="card col-12 col-md-4">
               <h3>Resultados</h3>
               <p>
                 Programas medibles y seguimiento para que midas tu progreso.
@@ -106,16 +110,16 @@
       <section id="clases" class="section">
         <div class="container">
           <h2>Nuestras clases y servicios</h2>
-          <div class="services-grid">
-            <article class="service">
+          <div class="services-grid row">
+            <article class="service col-12 col-md-4">
               <h3>Entrenamiento de fuerza</h3>
               <p>Programas estructurados para hipertrofia y fuerza máxima.</p>
             </article>
-            <article class="service">
+            <article class="service col-12 col-md-4">
               <h3>Functional Fitness</h3>
               <p>Movilidad, potencia y resistencia en sesiones dinámicas.</p>
             </article>
-            <article class="service">
+            <article class="service col-12 col-md-4">
               <h3>Coaching personal</h3>
               <p>Planes a medida, evaluación y seguimiento semanal.</p>
             </article>
@@ -143,8 +147,8 @@
             Conoce a nuestro equipo de coaches certificados. Cada entrenador
             trae experiencia en fuerza, movilidad y coaching personalizado.
           </p>
-          <div class="trainers-grid">
-            <article class="trainer card reveal">
+          <div class="trainers-grid row">
+            <article class="trainer card reveal col-12 col-md-4">
               <img
                 src="images/trainers/trainer1.svg"
                 alt="Alejandro, entrenador de fuerza"
@@ -155,7 +159,7 @@
                 deportiva.
               </p>
             </article>
-            <article class="trainer card reveal">
+            <article class="trainer card reveal col-12 col-md-4">
               <img
                 src="images/trainers/trainer2.svg"
                 alt="María, coach funcional"
@@ -165,7 +169,7 @@
                 Especialista en functional fitness y entrenamientos en grupo.
               </p>
             </article>
-            <article class="trainer card reveal">
+            <article class="trainer card reveal col-12 col-md-4">
               <img
                 src="images/trainers/trainer3.svg"
                 alt="Diego, entrenador personal"
@@ -181,15 +185,15 @@
       <section id="testimonios" class="section">
         <div class="container">
           <h2>Testimonios</h2>
-          <div class="testimonials">
-            <blockquote class="testimonial reveal">
+          <div class="testimonials row">
+            <blockquote class="testimonial reveal col-12 col-md-6">
               <p>
                 "En 3 meses aumenté mi fuerza y gané confianza. La comunidad es
                 lo mejor."
               </p>
               <cite>— Ana, miembro</cite>
             </blockquote>
-            <blockquote class="testimonial reveal">
+            <blockquote class="testimonial reveal col-12 col-md-6">
               <p>
                 "Entrenadores que realmente entienden progresión y técnica."
               </p>
@@ -203,8 +207,8 @@
       <section id="planes" class="section bg-light">
         <div class="container">
           <h2>Planes de membresía</h2>
-          <div class="plans-grid">
-            <div class="plan card reveal">
+          <div class="plans-grid row">
+            <div class="plan card reveal col-12 col-md-4">
               <h3>Plan Básico</h3>
               <p class="price">$399 / mes</p>
               <ul>
@@ -213,7 +217,7 @@
               </ul>
               <a class="btn btn-outline" href="#contacto">Elegir</a>
             </div>
-            <div class="plan card plan-featured reveal">
+            <div class="plan card plan-featured reveal col-12 col-md-4">
               <h3>Plan Pro</h3>
               <p class="price">$699 / mes</p>
               <ul>
@@ -222,7 +226,7 @@
               </ul>
               <a class="btn btn-primary" href="#contacto">Comenzar</a>
             </div>
-            <div class="plan card reveal">
+            <div class="plan card reveal col-12 col-md-4">
               <h3>Plan Elite</h3>
               <p class="price">$999 / mes</p>
               <ul>
@@ -237,14 +241,14 @@
 
       <!-- CTA / FORM -->
       <section id="contacto" class="section cta-section">
-        <div class="container cta-grid">
-          <div>
+        <div class="container cta-grid row">
+          <div class="col-12 col-lg-6">
             <h2>Comienza tu transformación</h2>
             <p>
               Déjanos tus datos y te contactamos para agendar una prueba gratis.
             </p>
           </div>
-          <form id="leadForm" class="lead-form" novalidate>
+          <form id="leadForm" class="lead-form col-12 col-lg-6" novalidate>
             <label for="name">Nombre</label>
             <input
               id="name"
@@ -305,8 +309,8 @@
           </div>
         </div>
       </div>
-      <div class="container ubicacion-grid">
-        <div class="map-wrap">
+      <div class="container ubicacion-grid row">
+        <div class="map-wrap col-12 col-lg-8">
           <!-- Carrusel de imágenes del frente del gimnasio -->
           <!-- Mapa centrado en el centro de Colima (lat: 19.2433, lng: -103.7240) -->
           <iframe
@@ -319,7 +323,7 @@
             loading="lazy"
           ></iframe>
         </div>
-        <div class="contact-card card">
+        <div class="contact-card card col-12 col-lg-4">
           <h3>Visítanos</h3>
           <p>
             <strong>Dirección:</strong> María Ahumada de Gómez 46, La Frontera,
@@ -344,8 +348,8 @@
     </section>
 
     <footer class="site-footer bg-dark">
-      <div class="container footer-grid">
-        <div>
+      <div class="container footer-grid row">
+        <div class="col-12 col-md-6">
           <strong>Villa Gym Colima</strong>
           <p>
             Centro, Colima • Tel:
@@ -357,7 +361,7 @@
             >
           </p>
         </div>
-        <div>
+        <div class="col-12 col-md-6">
           <p>Síguenos en Instagram</p>
           <a
             class="social"
